# effect-audit

./: Cargo.toml  README.md
features/: baseline.feature  cli.feature  dogfood.feature  effects.feature  hash_iteration.feature  kernel_role.feature  macro_args.feature  mandated_boxing.feature  manifest.feature  shared_mutable_fields.feature  suppression.feature  test_gating.feature
src/: audit.rs  baseline.rs  cfg_pred.rs  discovery.rs  effect.rs  finding.rs  lib.rs  main.rs  modtree.rs  report.rs  scan.rs  suppress.rs
tests/: cucumber.rs
tests/fixtures/allowlist/: Cargo.toml
tests/fixtures/allowlist/src/: lib.rs
tests/fixtures/asynctrait/: Cargo.toml
tests/fixtures/asynctrait/src/: lib.rs
tests/fixtures/clean/: Cargo.toml
tests/fixtures/clean/src/: lib.rs
tests/fixtures/denylist/: Cargo.toml
tests/fixtures/denylist/src/: lib.rs
tests/fixtures/dirty/: Cargo.toml
tests/fixtures/dirty/src/: lib.rs
tests/fixtures/gated/: Cargo.toml
tests/fixtures/gated/src/: custom_path.rs  lib.rs  prod.rs  skipme.rs
tests/fixtures/hashiter/: Cargo.toml
tests/fixtures/hashiter/src/: lib.rs
tests/fixtures/kernel/: Cargo.toml
tests/fixtures/kernel/src/: lib.rs
tests/fixtures/kerneldep/: Cargo.toml
tests/fixtures/kerneldev/: Cargo.toml
tests/fixtures/kernelio/: Cargo.toml
tests/fixtures/kernelio/src/: lib.rs
tests/fixtures/kernelpair/: Cargo.toml
tests/fixtures/kernelpair/floor/: Cargo.toml
tests/fixtures/kernelpair/floor/src/: lib.rs
tests/fixtures/kernelpair/vocab/: Cargo.toml
tests/fixtures/kernelpair/vocab/src/: lib.rs
tests/fixtures/kernelvouch/: Cargo.toml
tests/fixtures/kernelvouch/src/: lib.rs
tests/fixtures/macroleak/: Cargo.toml
tests/fixtures/macroleak/src/: lib.rs
tests/fixtures/nodomain/: Cargo.toml
tests/fixtures/nodomain/src/: lib.rs
tests/fixtures/unparseable/: Cargo.toml
tests/fixtures/unparseable/src/: lib.rs
