# Fixture: a domain crate with no `pure-deps` (legacy denylist mode). Only the
# built-in taxonomy fires: `reqwest` is flagged (network), `serde` is not.
[workspace]

[package]
name = "denylist-domain"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = "1"
reqwest = "1"

[package.metadata.hex-arch]
role = "domain"
