# Fixture: a kernel crate whose only dependency is a dev-dependency. Test
# scaffolding is not shipped, so it is excluded here exactly as it is for domain.
[workspace]

[package]
name = "kerneldev-contract"
version = "0.0.0"
edition = "2021"

[dev-dependencies]
serde = "1"

[package.metadata.hex-arch]
role = "kernel"
